@@ -38,11 +38,10 @@ import org.junit.jupiter.api.Test;
 import java.util.List;
 
 
-@SuppressWarnings("ALL")
 class ConverterTest{
 
 	@MessageHeader(start = "wc1")
-	static class TestConverter1{
+	private static class TestConverter1{
 		@BindString(size = "3")
 		String header;
 		@BindByte(converter = WrongConverterInput.class)
@@ -63,7 +62,7 @@ class ConverterTest{
 	}
 
 	@MessageHeader(start = "wc2")
-	static class TestConverter2{
+	private static class TestConverter2{
 		@BindString(size = "3")
 		String header;
 		@BindByte(converter = WrongConverterOutput.class)
@@ -71,7 +70,7 @@ class ConverterTest{
 	}
 
 	@MessageHeader(start = "wc3")
-	static class TestConverter3{
+	private static class TestConverter3{
 		@BindString(size = "3")
 		String header;
 		@BindByte(converter = WrongConverterOutput.class)
@@ -103,7 +102,7 @@ class ConverterTest{
 
 		Assertions.assertNotNull(result);
 		Assertions.assertEquals(2, result.size());
-		Response<byte[], Object> response = result.get(0);
+		Response<byte[], Object> response = result.getFirst();
 		Assertions.assertArrayEquals(payload, response.getSource());
 		Assertions.assertTrue(response.hasError());
 		Assertions.assertEquals("java.lang.IllegalArgumentException: Can not input Byte (1) to decode method of converter WrongConverterInput in field io.github.mtrevisan.boxon.core" +
@@ -123,7 +122,7 @@ class ConverterTest{
 
 		Assertions.assertNotNull(result);
 		Assertions.assertEquals(2, result.size());
-		Response<byte[], Object> response = result.get(0);
+		Response<byte[], Object> response = result.getFirst();
 		Assertions.assertArrayEquals(payload, response.getSource());
 		Assertions.assertTrue(response.hasError());
 		Assertions.assertEquals("java.lang.IllegalArgumentException: Can not set String field to Byte in field io.github.mtrevisan.boxon.core.ConverterTest$TestConverter2.value"
@@ -143,7 +142,7 @@ class ConverterTest{
 
 		Assertions.assertNotNull(result);
 		Assertions.assertEquals(1, result.size());
-		Response<byte[], Object> response = result.get(0);
+		Response<byte[], Object> response = result.getFirst();
 		Assertions.assertArrayEquals(payload, response.getSource());
 		Assertions.assertFalse(response.hasError());
 	}
