@@ -59,7 +59,6 @@ import java.lang.annotation.Annotation;
 import java.util.List;
 
 
-@SuppressWarnings("ALL")
 class CodecArrayTest{
 
 	private static class Version{
@@ -107,7 +106,7 @@ class CodecArrayTest{
 	@Test
 	void arrayPrimitive() throws FieldException{
 		CodecInterface<BindArrayPrimitive> codec = new CodecArrayPrimitive();
-		int[] encodedValue = new int[]{0x0000_0123, 0x0000_0456};
+		int[] encodedValue = {0x0000_0123, 0x0000_0456};
 		BindArrayPrimitive annotation = new BindArrayPrimitive(){
 			@Override
 			public Class<? extends Annotation> annotationType(){
@@ -176,7 +175,7 @@ class CodecArrayTest{
 	@Test
 	void arrayOfSameObject() throws FieldException{
 		CodecArray codec = new CodecArray();
-		Version[] encodedValue = new Version[]{new Version((byte) 0, (byte) 1, (byte) 12), new Version((byte) 1, (byte) 2, (byte) 0)};
+		Version[] encodedValue = {new Version((byte) 0, (byte) 1, (byte) 12), new Version((byte) 1, (byte) 2, (byte) 0)};
 		BindArray annotation = new BindArray(){
 			@Override
 			public Class<? extends Annotation> annotationType(){
@@ -289,7 +288,7 @@ class CodecArrayTest{
 
 		Assertions.assertNotNull(result);
 		Assertions.assertEquals(1, result.size());
-		Response<byte[], Object> response = result.get(0);
+		Response<byte[], Object> response = result.getFirst();
 		Assertions.assertFalse(response.hasError());
 		Assertions.assertEquals(TestChoice4.class, response.getMessage().getClass());
 		TestChoice4 parsedMessage = (TestChoice4)response.getMessage();
@@ -315,7 +314,7 @@ class CodecArrayTest{
 
 		Assertions.assertNotNull(result);
 		Assertions.assertEquals(1, result.size());
-		Response<byte[], Object> response = result.get(0);
+		Response<byte[], Object> response = result.getFirst();
 		Assertions.assertFalse(response.hasError());
 		Assertions.assertEquals(TestChoice5.class, response.getMessage().getClass());
 		TestChoice5 parsedMessage = (TestChoice5)response.getMessage();
